syntax = "proto3";
package hero;

enum Corpus {
  CORPUS_UNSPECIFIED = 0;
  CORPUS_UNIVERSAL = 1;
  CORPUS_WEB = 2;
}


service HeroesService {
  rpc Unary (HeroById) returns (Hero) {}
  rpc ServerStream (HeroById) returns (stream Hero) {}
  rpc ClientStream (stream HeroById) returns (Hero) {}
  rpc ClientAndServerStream (stream HeroById) returns (stream Hero ) {}

}

message HeroById {
  int32 id = 1;
}

message SampleMessage {
  oneof test_oneof {
    string name = 4;
    Hero sub_message = 9;
  }
}

message Hero {
  int32 id = 1;
  string name = 2;
  Corpus corpus = 4;
  repeated Corpus results = 5;
  repeated string details = 6;
  map<string, Hero> projects = 7;
}